--- a/s3-lambda-dynamodb-pipeline/samconfig.toml
+++ b/s3-lambda-dynamodb-pipeline/samconfig.toml
@@ -16,6 +16,12 @@ lint = true
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
+resolve_s3 = true
+s3_prefix = "s3-lambda-dynamodb-pipeline"
+region = "us-east-1"
+profile = "tvt_admin"
+disable_rollback = true
+image_repositories = []
 
 [default.package.parameters]
 
